--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,23 @@
 h2 {
     color: green;
+} 
+
+div {
+    border: 1px solid black;
+    margin: 5px;
+    padding: 5px;
+}
+
+div h4 {
+    margin-bottom: 0;
+    
+}
+
+div:hover {
+    background-color: black;
+    color: white;
+}
+
+div section {
+    margin-left: 15px;
 }
