--- a/views/users.hbs
+++ b/views/users.hbs
@@ -9,10 +9,13 @@
         {{#each users}}
             <div class="user">
                 <h3>{{name}}</h3>
-                <p>{{address.street}}</p>
-                <p>{{address.suite}}</p>
-                <p>{{address.city}}</p>
-                <p>{{address.zipcode}}</p>
+                <section>
+                <h4>Address:</h4>
+                <p>Street: {{address.street}}</p>
+                <p>Suite: {{address.suite}}</p>
+                <p>City: {{address.city}}</p>
+                <p>Zipcode: {{address.zipcode}}</p>
+                </section>
                 <a href="">{{website}}</a>
             </div>
         {{/each}}
